update X1, separated info from MHX

--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -20,17 +20,67 @@
 
 \begin{chapter}{Mega Man X}
 	Mega Man X is born as a spin-off games of the classic Mega Man franchise for the Super Famicon/SNES consoles (later also for PC)  between the 1993 and the 1995\cite{wiki:MMX}. The game take place hundred years after the main franchise timeline, in a world where humans and special robots capable of having feelings co-exists and where X, one of those robots, fights the evil Sigma which aims to eliminate humans on order to have a world only for reploids.
-	\section[Main plot]{Main plot }
-	In the year 21XX humans live peacefully with new kind of robots: reploids. Reploids (\ref{dict:reploids}) are a particular type of robots with the ability to take autonomous decisions as well as having feelings and sentiments\cite{Xcoll1:Manual_1}. However sometimes reploids' electric brain can undergo  malfunctioning making them act dangerously for nearby humans and reploids . When this happen the reploid is labeled as ``Maverick'' and has to be stopped, in order to be repaired or disposed, by a special organization of reploids created with the exact purpose to stop mavericks: the Maverick Haunters. Leader of the Maverick Haunters is Sigma, one of the most advanced reploid of the time. Fighting together the Maverick Haunters there is also X, the protagonist of the story, alongside his friend Zero. 
 	
-	The situation takes a turn when Sigma himself go maverick, declaring war against humanity and recruiting in its rank other maverick haunters, both willing to follow him or threatened by Sigma itself. In order to stop the war X decides to go and try to stop his former leader joining the fight in the highway, but is attacked by Vile, an ex-haunter released by Sigma from prison, in his ride armor. Only Zero's intervention, which force Vile to flee, allow X to escape safely. The two then decide to split: while Zero goes to locate the enemy fortress, X has to deal with the threat of Sigma's mavericks. As X defeats all the eight mavericks, acquiring in the process new power-ups and strength, he joins Zero who in the meanwhile has located the Sigma fortress flying over the sea. At the entrance however they are immediately confronted with Vile and his ride armor, which first manages to capture Zero (that challenged him in a one-versus-one fight) and subsequently X too. As Vile laughs at his victory, Zero manages to escape from his cage, latches on the ride armor and detonates himself, destroying it but leaving Vile untouched. Seeing his friend's action give X new energy, allowing him to break free from his prison and face Vile, now vulnerable, defeating him in the process. Before going on however X listens to Zero's ultimate words\cite{wiki:MMX_script}. Zero informs X that his auto-repair system cannot handle all damages taken and that X has a power even greater than his own, and that he could be capable of face Sigma (eventually Zero also gives X his own Z-buster if he didn't manage to get his own buster upgrade). After that, Zero dies and X proceeds infiltrating Sigma's fortress and his dangers, including re-facing all the previously-defeated mavericks. At the end X arrives at Sigma's place where he was waiting. At first Sigma acts with arrogance, looking surprised that X has managed to reach him with his only forces and claiming he could destroy him without effort. However he decides to leave the pleasure to his pet Velguarder, as he leaves the scene to assist at the fight. After X successfully manages to destroy Velguarder, Sigma changes his mind a little, understanding why Zero placed his trust in X and claiming X could have been an haunter as strong as he was. After that he proceeds to confront X, but gets defeat and his body destroyed, only his head remaining which merges with a giant wolf-based mechaniloid in the room, giving Sigma a new body to fight X. However X succeeds in destroying the new body as well, effectively getting rid of Sigma for good. As Sigma blames X for destroying his dream of a world only for reploids, Sigma himself and the fortress start to explode, forcing X to teleport to the outside. In the end X ponders about the destruction he helped to generate, on the sacrifices made for the victory, and questioning if choosing to fight was the right choice, meditating if another option was possible. As the flying fortress sink in the ocean, X realizes that he will have to fight more battles before having the answers he needs. 
+	In the year 2005 a remake for PlayStation Portable was done, upgrading to a 3D graphic close to the precedent title, Mega Man X8. This game's (named Maverick Hunter X or MHX in short) purpose was to re-tell the first game story with some minor changes such as X relationship with the Mavericks and Sigma, which weren't present in the original game. Changes also effected level design, such as Light's capsule positions or Sigma stages, completely different from original ones.
+	\section[Main plot]{Main plot (X)}
+	In the year 21XX humans live peacefully with new kind of robots: reploids. Reploids (\ref{dict:reploids}) are a particular type of robots with the ability to take autonomous decisions as well as having feelings and sentiments\cite{Xcoll1:Manual_X1}. However sometimes reploids' electric brain can undergo  malfunctioning making them act dangerously for nearby humans and reploids . When this happen the reploid is labeled as ``Maverick'' and has to be stopped, in order to be repaired or disposed, by a special organization of reploids created with the exact purpose to stop mavericks: the Maverick Haunters. Leader of the Maverick Haunters is Sigma, one of the most advanced reploid of the time. 
+		
+	The situation takes a turn when Sigma himself go maverick, declaring war against humanity and recruiting in its rank other maverick haunters, both willing to follow him or threatened by Sigma itself. In order to stop the war X, the main protagonist of the story, decides to joining the fight alongside Zero (a close friend of him and now promoted to leader of the haunters), in the highway but is attacked by Vile, an ex-haunter released by Sigma from prison, in his ride armor. Only the intervention of Zero himself, which force Vile to flee, allow X to escape safely. The two then decide to split: while Zero goes to locate the enemy fortress, X has to deal with the threat of Sigma's mavericks. As X defeats all the eight mavericks, acquiring in the process new power-ups and strength, he joins Zero who in the meanwhile has located the Sigma fortress flying over the sea. At the entrance however they are immediately confronted with Vile and his ride armor, which first manages to capture Zero (that challenged him in a one-versus-one fight) and subsequently X too. As Vile laughs at his victory, Zero manages to escape from his cage, latches on the ride armor and detonates himself, destroying it but leaving Vile untouched. Seeing his friend's action give X new energy, allowing him to break free from his prison and face Vile, now vulnerable, defeating him in the process. Before going on however X listens to Zero's ultimate words\cite{wiki:MMX_script}. Zero informs X that his auto-repair system cannot handle all damages taken and that X has a power even greater than his own, and that he could be capable of face Sigma (eventually Zero also gives X his own Z-buster if he didn't manage to get his own buster upgrade). After that, Zero dies and X proceeds infiltrating Sigma's fortress and his dangers, including re-facing all the previously-defeated mavericks. At the end X arrives at Sigma's place where he was waiting. At first Sigma acts with arrogance, looking surprised that X has managed to reach him with his only forces and claiming he could destroy him without effort. However he decides to leave the pleasure to his pet Velguarder, as he leaves the scene to assist at the fight. After X successfully manages to destroy Velguarder, Sigma changes his mind a little, understanding why Zero placed his trust in X and claiming X could have been an haunter as strong as he was. After that he proceeds to confront X, but gets defeat and his body destroyed, only his head remaining which merges with a giant wolf-based mechaniloid in the room, giving Sigma a new body to fight X. However X succeeds in destroying the new body as well, effectively getting rid of Sigma for good. As Sigma blames X for destroying his dream of a world only for reploids, Sigma himself and the fortress start to explode, forcing X to teleport to the outside. In the end X ponders about the destruction he helped to generate, on the sacrifices made for the victory, and questioning if choosing to fight was the right choice, meditating if another option was possible. As the flying fortress sink in the ocean, X realizes that he will have to fight more battles before having the answers he needs. 
 	After the game's credits, it is then revealed that the next battle will not take long before occurring, since a message form Sigma is played, where the maverick states that his spirit is still intact and waiting for a new body to be built for face X again.
+	\section{Main Plot (MHX)}
+	While being for the major part similar to the original plot, Maverick Haunter X takes some divergence regarding characters relationship as well as X's background \cite{wiki:MM_MHX}. One of the main divergence point regard X's story prior to the war's start. Next is a summary of Maverick Haunter X differences respect X1.
+	
+	An in-depth background of the war is given, via the ``Day of $\Sigma$""\ref{App:Day_of_Sigma} OVA, explaining how Sigma started his revolution. Here X's background is also changed, now being already a Maverick Haunter (in contrast with the original, where no information are available) serving in the 17th Elite Unit alongside Zero and commanded by Sigma himself. X's haunter rank is B (in contrast to Zero's one which is SA) due to his kindness and pacifist spirit, the only ones suspecting of his true potential being again Zero and Sigma. 
+	
+	Another character with an expanded background is Vile. Here he aims to destroy both X and Sigma, to create his own world, hence following Sigma plans only due the fact some objectives they have match.
+	Last main difference regards the final portion of the story\cite{wiki:MM_MHX_script}. In fact, while in the original one both X and Zero enter Sigma fortress from the front and immediately face Vile, here Zero acts as decoy opening his way through the main entrance, allowing X to enter unobserved from a secondary passage (despite having in any case face previous bosses brought back to life) only for the end to meet with Zero and being stopped by Vile right before the confrontation with Sigma. As the main story, however, Vile captures both of them, resulting in Zero sacrificing and X destroying him. Finally, even Sigma has a different attitude regarding X due already suspecting X's great potential. In fact he first tests X by making him fight Velguarder (in contrast with the original game, where Sigma use Velguarder thinking to be sufficient to defeat X) and then challenges X himself, ending in the same way as the original story.	
+	
 	\section{Main Characters}
 	\subsection{X}
+	X(\ref{char:X}) is the first type of a new kind of sentient robot capable of having feeling and take decision of his own developed by Dr. Thomas Light in the year 20XX. Being provided with great power, Dr. Light needed to ensure X integrity by running a series of test which would have required thirty years to be completed. Unlikely, Dr. Light lifespan didn't allow himself to live longer to complete all tests, so he sealed X in a capsule running tests in autonomy.
+	
+	In the year 21XX X's capsule is found by Dr. Cain\ref{cha:Cain} during an archeological expedition\cite{X:Cain_journal},\cite{wiki:Cain_journal}. Dr. Cain awakes X and, using Light's designs and X help, develop a new kind of robot later called ``Reploids''. X however remains questioning about his place in the world and the future Dr. Light wanted for him. Despite this, when the evil Sigma starts his war against human kind, X is forced to step up and fight in order to restore peace alongside his friend Zero. 
+	
+	
+	What told until now refers to the original role of X in the X1 game. Nevertheless, as stated before, Maverick Haunter X re-write X's story by providing a new background for events prior to Sigma revolt. In this continuity Dr. light seals X away not for testing his integrity, but rather believing the world not to be ready for X's technology. Here however Light is firmly convinced that X has a good spirit and that he will use his power to achieve peace\cite{wiki:MM_MHX_X}. Moreover after his awakening X joins the Maverick Haunters (which do not happen in the original story), serving in the 17th Elite Unit, alongside Zero and under the direct command of Sigma. Despite having great potential, however, X's haunter rank is only B (in contrast with the SA rank of Zero) due is what seems to be his lack of decision during battle. In reality this is caused by his pacifist nature, making him reluctant to fight and preventing him to use his real power\cite{Xcoll1:Manual_X1}. Nevertheless, when the evil Sigma starts his war against human kind, X is forced to step up and fight in order to restore peace together with Zero.
 	\subsection{Zero}
+	Fighting alongside X against Sigma is Zero. In the original X1 game, very few information are give regarding Zero, except being a friend of X and the new leader of the Maverick Haunters\cite{X:Cain_journal}, having the highest rank above all haunters which didn't side with Sigma. 
+	Different is the situation in the MHX games, where Zero's relationship with X is explained better, the former being close friend and a mentor for X in the 17th Elite Unit, having an SA haunter rank and working under Sigma. Here it is also stated how Zero repel evil with all his strength, fighting merciless against Maverick, Sigma included\cite{Xcoll1:Manual_X1}.  
+	
+	In any case, Zero story is the same for both games. He first appears at the end of the highway saving X from Vile's grasp, and asking X to take care of Sigma forces while he locates the enemy hideout. Next he's seen at the entrance of Sigma fortress where he suggests to split up, offering to act as decoy to let X sneak inside. Lastly Zero is seen for the last time at the final battle with Vile, where he sacrifices himself to destroy Vile's armor and allow X to defeat him. Finally with his last words he ask X to go and take down Sigma, eventually giving X his own Z-buster, in case X hasn't upgraded it yet.
 	\section{Game Mechanics}
-	\section{Weapons}
-	\section{First Armor}
+	Mega Man X's gameplay stays faithful to its original series by being a 2D hybrid between a run' n' gun and a platform, where the main protagonist (X in this case) has to clear different stages in order to unlock the final area of the game. Each stage has its own theme, contains a certain number of power-up to collect (depending on the stage it could be one ore more) which may require other power-up to be collected first in order to be obtained (typically bosses weapons). Finally at the end of the stage a boss waits, which has to be defeat in order to clear the stage and which will give X a new weapon based on one of his attacks.
+
+	X1 introduces however some new mechanics which will later define the series\cite{wiki:X1_features}:
+	\begin{itemize}
+		\item Dash: X, via the boot parts, can dash and move faster, as well as jump higher via a dash-jump.
+		\item Wall-jumping: X can jump onto wall in order to climb them or can slide down to descend slowly. He can also dash-jump off to a wall to cover a greater distance.
+		\item Armor parts(\ref{X1:Armor}): By finding Light's capsules (four in total) X can be upgraded unlocking new powers which can help the player during the game.
+		\item Sub-Weapon charging\ref{X1:sub_weapon}: via the buster upgrade, X can not only charge his main X-buster, as the main series, but he can also charge his other sub-weapon to increase damage dealt or change their functionalities.
+		\item Heart tanks: beside classical Sub-tank X, eight heart tank are also scattered in various stages (one per each). By picking them up X's energy grows by two.
+		\item Stage interactions: although a very limited feature, by clearing certain stages, other ones will be effected and change in some portions.
+	\end{itemize}
+	\section{Weapons}\label{X1:sub_weapon}
+	Here is a list of all sub-weapons available in Mega Man X/ Mega Man Maverick Haunter X (\cite{MHX:manual},\cite{wiki:X1_weapons}):
+	\subsection{Shotgun Ice}
+	Shotgun Ice is the weapon obtained by X by defeating Chill Penguin. It absorbs moisture in the air and fires it in crystallized form. If it hits an enemy or a hard surface, it breaks into 5 pieces and which ricochet backward and get destroyed if hit another wall or enemy When charged it creates an Chill Penguin-shaped ice platform (only in X1, while in MHX is only a sharp sled of ice) in similarly to how the boss creates his ice sculpture. X can stand on the platform which will start moving forward shortly after being created. If X creates the platform and then places himself in the same spot where the platform is creating (due the fact that the creation in not immediate) the platform will slightly push X left or right depending of its position, enabling some glitches such as wall clipping(\ref{X1:misc}, only in X1).
+	\subsection{Electric Spark}
+	Electric spark creates high-pressure voltage within the X-Buster and fires, for a maximum of three at time. If the electric spark hits an hard surface, it splits in half, starting to travel up and down along the surface. The charged version of this weapon differs between the original game and his remake. In X1 upon charged X will release to electric columns in front and behind him and which will move in their respective directions, while in MHX X will generate electricity in all directions. This weapon is acquired upon defeating Spark Mandrill.
+	\subsection{Rolling Shield}
+	After beating Armored Armadillo, X will gain the Rolling Shield. By using it X spins energy at high speeds within the Buster and launches it	as an energy shot that rolls along the ground. The generated projectile is about the same size as X (half in MHX) and will roll following the ground until making contact with an enemy or disappear after a while Only in MHX the shield will absorb any projectile directed toward it, as well as dispose Mets even while hiding\cite{wiki:Rolling_shield}. Upon contact whit a wall, the shield will ricochet once and disappear up hitting a wall again. When charged X will surround himself with an energy field which will eliminates any enemy with less than three hit points, but will disappear upon contact with enemy with more than that. In the original game, while the charged shield is active, X cannot shoot nor change weapon while in game, requiring the player to change weapon from the pause menu and thus making the shield disappear.
+	\subsection{Homing Torpedo}
+	When equipping this sub-weapon X gains the ability to fire up to two (three in MHX)\ref{wiki:Homing_torpedo} torpedoes capable of tracking enemies. As it picks up speed, it homes in on the closest enemy and pursues it. When charged X will release a fan of four (six in MHX) fish-shaped missiles with greater speed and attack power which home better to enemies. This weapon is obtained after defeating Launch Octopus.
+	\subsection{Boomerang Cutter}
+	The Boomerang Cutter is the weapon obtained upon defeating Boomerang Kuwanger. It fires a sharp boomerang made from a special metal. If it does not hit an enemy, it returns to its owner. If the boomerang passes an item on its way back, it picks up the	item and delivers it to its own owner (even bringing dropped life/weapon energy from enemies). Up to three cutters can be on screen at the time\cite{wiki:Boomerang_cutter} and their trajectory will depend on the position X was when he fired them: the will arc upwards if X was standing on the ground, while will arc downwards if X was in the air. If a boomerang successfully return to X without hitting an enemy, it will replenish the energy used to create it. Upon charged X will release four bigger boomerang spiraling out of X diagonally. In MHX this has been changed with four boomerang of doubled size which will move back and forward in straight line a few times. 
+	
+	Finally both Flame Mammoth and Launch Octopus, while not being directly weak to Boomerang Cutter, can be heavily damaged when hit with this weapon, the former loosing his trunk and the latter his tentacles, resulting in both being unable to perform certain moves.
+	\subsection{Chameleon Sting}
+	The Chameleon Sting, obtained after beating Sting Chameleon, emits single straightforward laser which than splits into three directions: forward, up-forward, down-forward. In MHX it instead directly emits three lasers, which can be slight angled up and down and are slightly faster. In both games the charged version make X flash in various colors of the rainbow making him invincible to any damage (besides insta-kill hazards like pits) for a short amount of time. In the original game X cannot switch to any weapon nor shoot the current one while the invincibility is active, meanwhile in the remake is free to fire both with the current one and any other weapon\cite{wiki:Chameleon_sting}.
+	\subsection{Storm Tornado}
+	The Storm Tornado turns the X-buster into a high-power fan that blasts opponents with hard-hitting wind, capable of destroying enemies that stand in its path. It shoots an horizontal tornado which stays on the screen for a short amount of time, and then starts moving in the direction X is facing. Due to his length it can hit enemies multiple times, being an effective way to dispose most of them, especially bigger ones.  The MHX version has its length halved, allowing to shoot it at a faster rate. When charged the Storm Tornado will create a large vortex covering all the screen in high, surrounding X in the original game while exploding from a shot projectile upon hitting a solid surface in the remake.\cite{wiki:Storm_tornado} It is obtained by defeating Storm Eagle
+	\subsection{Fire Wave}
+	Fire Wave converts the X-buster into a powerful flamethrower, which deals continuous damage to enemies but that cannot be used underwater. Upon pressing the fire button X will start shooting fire from his X buster at a continuous rate draining energy in the process. Once charged X will fire a fireball which creates a wave of fire upon hitting the ground and moving forward for a while. However in order to charge the weapon X must keep firing, draining energy in the process. This weapon is obtained once Flame Mammoth is defeated. 
+	\section{First Armor}\label{X1:Armor}
 	\section{Useful Techniques}
 	\section{Highway Stage}
 	\section{Ocean}
@@ -41,7 +91,8 @@
 	\section{Tower}
 	\section{Power Plant}
 	\section{Forest}
-	\section{Sigma Stage (1-4)}	
+	\section{Sigma Stage (1-4)}
+	\section{Miscellaneous}\label{X1:misc}
 \end{chapter}
 \bibliographystyle{IEEEtran}
 \bibliography{bibliography}
