--- a/bibliography.bib
+++ b/bibliography.bib
@@ -10,8 +10,76 @@
 	url={https://megaman.fandom.com/wiki/Mega_Man_X_(video_game)/Script}
 }
 
-
-@online{Xcoll1:Manual_1,
+@online{Xcoll1:Manual_X1,
 	author={{Megaman X legacy collection 1}},
 	title={{Megaman X Gallery}}
 }
+
+
+@online{wiki:MM_MHX,
+	author={{Mega Man Maverick Hunter X}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Mega_Man_Maverick_Hunter_X}
+}
+
+@online{wiki:MM_MHX_X,
+	author={{Mega Man X (character)/Maverick Hunter X}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Mega_Man_X_(character)/Maverick_Hunter_X}
+}
+
+@online{wiki:MM_MHX_script,
+	author={{Mega Man Maverick Hunter X Script (X's story)}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Mega_Man_Maverick_Hunter_X_Script_(X%27s_story)}
+}
+
+@online{X:Cain_journal,
+	author={{Mega Man X Instruction Booklet}},
+	title={{Nintendo, Capcom}},
+	url={https://www.nintendo.co.jp/clvs/manuals/common/pdf/CLV-P-SABCE.pdf}
+}
+
+@online{wiki:Cain_journal,
+	author={{The Journal of Dr. Cain}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/The_Journal_of_Dr._Cain}
+}
+
+@online{wiki:X1_features,
+	author={{Mega Man X (video game)}},
+	title={{Wikipedia, The Free Enciclopedya}},
+	url={https://en.wikipedia.org/wiki/Mega_Man_X_(video_game)}
+}
+
+@online{MHX:manual,
+	author={{Mega Man Maverich Haunter X user manual}},
+	title={{Capcom}},
+	url={	https://usermanual.wiki/Capcom/CapcomVideoGamesPlaystationportableUsersManual536674.877059048.pdf}
+}
+
+@online{wiki:Rolling_shield,
+	author={{Rolling Shield}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Rolling_Shield
+	}
+}
+
+@online{wiki:Boomerang_cutter,
+	author={{Boomerang Cutter}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Boomerang_Cutter}
+}
+
+@online{wiki:Chameleon_sting,
+	author={{Chameleon Sting}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Chameleon_Sting}
+}
+
+@online{wiki:Storm_tornado,
+	author={{}},
+	title={{The Megaman Knowledge Database}},
+	url={https://megaman.fandom.com/wiki/Storm_Tornado}
+}
+
