Added missing weapons and First Armor

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,12 +1,12 @@
 @online{wiki:MMX,
 	author={{Mega Man X (video game)}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Mega_Man_X_(video_game)}
 }
 
 @online{wiki:MMX_script,
 	author={{Mega Man X (video game)/Script}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Mega_Man_X_(video_game)/Script}
 }
 
@@ -18,23 +18,23 @@
 
 @online{wiki:MM_MHX,
 	author={{Mega Man Maverick Hunter X}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Mega_Man_Maverick_Hunter_X}
 }
 
 @online{wiki:MM_MHX_X,
 	author={{Mega Man X (character)/Maverick Hunter X}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Mega_Man_X_(character)/Maverick_Hunter_X}
 }
 
 @online{wiki:MM_MHX_script,
 	author={{Mega Man Maverick Hunter X Script (X's story)}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Mega_Man_Maverick_Hunter_X_Script_(X%27s_story)}
 }
 
-@online{X:Cain_journal,
+@online{X:Manual,
 	author={{Mega Man X Instruction Booklet}},
 	title={{Nintendo, Capcom}},
 	url={https://www.nintendo.co.jp/clvs/manuals/common/pdf/CLV-P-SABCE.pdf}
@@ -42,7 +42,7 @@
 
 @online{wiki:Cain_journal,
 	author={{The Journal of Dr. Cain}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/The_Journal_of_Dr._Cain}
 }
 
@@ -57,29 +57,60 @@
 	title={{Capcom}},
 	url={	https://usermanual.wiki/Capcom/CapcomVideoGamesPlaystationportableUsersManual536674.877059048.pdf}
 }
+@online{wiki:X_weapons,
+	author={{X's weaponry}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/X%27s_weaponry}
+}
+
 
 @online{wiki:Rolling_shield,
 	author={{Rolling Shield}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Rolling_Shield
 	}
 }
 
+@online{wiki:Homing_torpedo,
+	author={{Homing Torpedo}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Homing_Torpedo}
+}
+
 @online{wiki:Boomerang_cutter,
 	author={{Boomerang Cutter}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Boomerang_Cutter}
 }
 
 @online{wiki:Chameleon_sting,
 	author={{Chameleon Sting}},
-	title={{The Megaman Knowledge Database}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Chameleon_Sting}
 }
 
 @online{wiki:Storm_tornado,
-	author={{}},
-	title={{The Megaman Knowledge Database}},
+	author={{Storm Tornado}},
+	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Storm_Tornado}
 }
 
+
+@online{stratwiki:Heart_tank,
+	author={{Mega Man X/Heart Tanks}},
+	title={{STRATEGYWIKI}},
+	url={https://strategywiki.org/wiki/Mega_Man_X/Heart_Tanks
+	}
+}
+
+@online{wiki:First_armor,
+	author={{Armor Parts (Mega Man X)}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Armor_Parts_(Mega_Man_X)}
+}
+
+@online{wiki:Hadoken,
+	author={{Hadoken}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Hadoken}
+}
