Added techinques. Splitted into multiple files

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -114,3 +114,9 @@
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Hadoken}
 }
+
+@online{RTA_wiki:X1,
+	author={{Mega Man X}},
+	title={{Mega Man RTA Wiki}},
+	url={https://megamanrta.fandom.com/wiki/Mega_Man_X}
+}
