--- a/bibliography.bib
+++ b/bibliography.bib
@@ -120,3 +120,46 @@
 	title={{Mega Man RTA Wiki}},
 	url={https://megamanrta.fandom.com/wiki/Mega_Man_X}
 }
+
+@online{stratwiki:HighWay,
+	author={{Mega Man X/Highway Stage}},
+	title={{STRATEGYWIKI}},
+	url={https://strategywiki.org/wiki/Mega_Man_X/Highway_Stage}
+}
+
+@online{wiki:Highway,
+	author={{Highway Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Highway_Stage}
+}
+
+@online{wayback:X_resources,
+	author={{Rockman X Collected Sourcebook Information}},
+	title={{megaman.retrofaction.com, WayBack Machine}},
+	url={http://web.archive.org/web/20040603090322/http://megaman.retrofaction.com/mmx/resources/x1sb1.txt}
+}
+
+@online{stratwiki:Ocean,
+	author={{Mega Man X/Launch Octopus}},
+	title={{STRATEGYWIKI}},
+	url={https://strategywiki.org/wiki/Mega_Man_X/Launch_Octopus}
+}
+
+@online{wiki:Ocean,
+	author={{Ocean Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Ocean_Stage}
+}
+
+
+@online{wiki:Utuboros,
+	author={{Utuboros}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Utuboros}
+}
+
+@online{wiki:Launch_octopus,
+	author={{Launch Octopus}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Launch_Octopus}
+}
