--- a/src/x1.tex
+++ b/src/x1.tex
@@ -39,29 +39,29 @@ In any case, Zero story is the same for both games. He first appears at the end 
 	\item Dash: X, via the boot parts, can dash and move faster, as well as jump higher via a dash-jump.
 	\item Wall-jumping: X can jump onto wall in order to climb them or can slide down to descend slowly. He can also dash-jump off to a wall to cover a greater distance.
 	\item Armor parts(\ref{X1:Armor}): By finding Light's capsules (four in total) X can be upgraded unlocking new powers which can help the player during the game.
-	\item Sub-Weapon charging\ref{X1:sub_weapon}: via the buster upgrade, X can not only charge his main X-buster, as the main series, but he can also charge his other sub-weapon to increase damage dealt or change their functionalities.
+	\item Sub-Weapon charging(\ref{X1:sub_weapon}): via the buster upgrade, X can not only charge his main X-buster, as the main series, but he can also charge his other sub-weapon to increase damage dealt or change their functionalities.
 	\item Heart tanks: beside classical Sub-tank X, eight heart tank are also scattered in various stages (one per each). By picking them up X's energy grows by two, starting from 16 up to a maximum of 32\cite{stratwiki:Heart_tank}.
 	\item Stage interactions: although a very limited feature, by clearing certain stages, other ones will be effected and change in some portions.
 \end{itemize}
 \section{Weapons}\label{X1:sub_weapon}
 Here is a list of all sub-weapons available in\textit{ Mega Man X}/ \textit{Mega Man Maverick Haunter X} (\cite{MHX:manual},\cite{wiki:X_weapons}):
-\subsection{Shotgun Ice}
+\subsection{Shotgun Ice}\label{Shotgun_ice}
 Shotgun Ice is the weapon obtained by X after defeating Chill Penguin. It absorbs moisture in the air and fires it in crystallized form. If it hits an enemy or a hard surface, it breaks into 5 pieces which ricochet backward and get destroyed if hit another wall or enemy When charged it creates an Chill Penguin-shaped ice platform (only in \x, while in \mhx is only a sharp sled of ice) in similarly to how the boss creates his ice sculpture. X can stand on the platform which will start moving forward shortly after being created. If X creates the platform and then places himself in the same spot where the platform is creating (due the fact that the creation in not immediate) the platform will slightly push X left or right depending of its position, enabling some glitches such as wall clipping(\ref{X1:misc}, only in \x).
-\subsection{Electric Spark}
+\subsection{Electric Spark}\label{Electric_spark}
 Electric spark creates high-pressure voltage within the X-Buster and fires it, for a maximum of three at time. If the electric spark hits an hard surface, it splits in half, starting to travel up and down along the surface. The charged version of this weapon differs between the original game and his remake. In X1 upon charged X will release two electric columns in front and behind him and which will move in their respective directions, while in \mhx X will generate electricity in all directions. This weapon is acquired upon defeating Spark Mandrill.
-\subsection{Rolling Shield}
+\subsection{Rolling Shield}\label{Rolling_shield}
 After beating Armored Armadillo, X will gain the Rolling Shield. By using it X spins energy at high speeds within the Buster and launches it	as an energy shot that rolls along the ground. The generated projectile is about the same size as X (half in \mhx) and will roll following the ground until making contact with an enemy or disappear after a while Only in \mhx the shield will absorb any projectile directed toward it, as well as dispose Mets even while hiding\cite{wiki:Rolling_shield}. Upon contact whit a wall, the shield will ricochet once and disappear up hitting a wall again. When charged X will surround himself with an energy field which eliminates any enemy with less than three hit points that hit it, but will disappear upon contact with enemy with more than that life value. In the original game while the charged shield is active X cannot shoot nor change weapon while in game, requiring the player to change weapon from the pause menu and thus making the shield disappear.
-\subsection{Homing Torpedo}
+\subsection{Homing Torpedo}\label{Homing_torpedo}
 When equipping this sub-weapon X gains the ability to fire up to two (three in \mhx)\cite{wiki:Homing_torpedo} torpedoes capable of tracking enemies. As they pick up speed, they home in on the closest enemy and pursue it. When charged X will release a fan of four (six in \mhx) fish-shaped missiles with greater speed and attack power which home better to enemies. This weapon is obtained after defeating Launch Octopus.
-\subsection{Boomerang Cutter}
+\subsection{Boomerang Cutter}\label{Boomerang_cutter}
 The Boomerang Cutter is the weapon obtained upon defeating Boomerang Kuwanger. It fires a sharp boomerang made from a special metal. If it does not hit an enemy, it returns to its owner. and if it passes an item on its way back, it picks up the	item and delivers it to its own owner (even bringing dropped life/weapon energy from enemies). Up to three cutters can be on screen at the time\cite{wiki:Boomerang_cutter} and their trajectory will depend on the position X was when he fired them: they will arc upwards if X was standing on the ground, while they will arc downwards if X was in the air. If a boomerang successfully return to X without hitting an enemy, it will replenish the energy used to create it. Upon charged X will release four bigger boomerang spiraling out of him diagonally. In \mhx this has been changed with four boomerang of doubled size which will move back and forward in straight line a few times. 
 
 Finally both Flame Mammoth and Launch Octopus, while not being directly weak to Boomerang Cutter, can be heavily damaged when hit with this weapon, the former loosing his trunk and the latter his tentacles, resulting in both being unable to perform certain moves.
-\subsection{Chameleon Sting}
+\subsection{Chameleon Sting}\label{Chameleon_sting}
 The Chameleon Sting, obtained after beating Sting Chameleon, emits a single straightforward laser which than splits into three directions: forward, up-forward, down-forward. In \mhx it instead directly emits three lasers, which can be angled diagonal-up and diagonal-down and are slightly faster. In both games the charged version makes X flash in various colors of the rainbow making him invincible to any damage (besides insta-kill hazards like pits) for a short amount of time. In the original game X cannot switch to any weapon nor shoot the current one while the invincibility is active, meanwhile in the remake is free to fire both with the current one and any other weapon\cite{wiki:Chameleon_sting}.
-\subsection{Storm Tornado}
+\subsection{Storm Tornado}\label{Storm_tornado}
 The Storm Tornado turns the X-buster into a high-power fan that blasts opponents with hard-hitting wind, capable of destroying enemies that stand in its path. It shoots an horizontal tornado which stays on the screen for a short amount of time, and then starts moving in the direction X was facing when shot. Due to his length it can hit enemies multiple times, being an effective way to dispose most of them, especially bigger ones.  The \mhx version has its length halved, allowing to shoot it at a faster rate. When charged the Storm Tornado will create a large vortex covering all the screen in high, surrounding X in the original game while exploding from a shot projectile upon hitting a solid surface in the remake.\cite{wiki:Storm_tornado} It is obtained by defeating Storm Eagle.
-\subsection{Fire Wave}
+\subsection{Fire Wave}\label{Fire_wave}
 Fire Wave converts the X-buster into a powerful flamethrower, which deals continuous damage to enemies but that cannot be used underwater. Upon pressing the fire button X will start shooting fire from his X buster at a continuous rate draining energy in the process. Once charged X will fire a fireball which creates a wave of fire upon hitting the ground and moves forward for a while. However in order to charge the weapon X must keep firing, draining energy in the process. This weapon is obtained once Flame Mammoth is defeated. 
 \section{First Armor}\label{X1:Armor}
 While exploring stages X can run into one of the four capsules hidden by Dr. Light. When entering in contact the capsule will open revealing Dr. Light's hologram which will talk to X and give him one of the armor parts\cite{wiki:First_armor}, explaining in the process how it works.
@@ -98,7 +98,43 @@ Here are listed some useful techniques which the game does not explain but can b
 \end{itemize}
 
 \section{Highway Stage}
+The Highway Stage (Central HighWay in \mhx) is the first stage of the game. X arrives here in order to join the fight against Sigma's forces. The stage is rather straightforward, having X to travel while eliminating different enemies, while also teaching the player some basic mechanics such as wall-jumping.  The stage can be split into two main sections\cite{stratwiki:HighWay}, the second one having more gaps and pieces of the highway falling as X stands on (recognizable by a darker texture color). In the first section of the highway two sub-bosses are presents in form of Bee Bladers\ref{minibossBee_Bladers}. At the end of the stage X will be attacked by Death Rogumer, which will start sending towards him several Road Attackers(\ref{enem:Road_attackers}). Once some of them have been destroyed, Vile will drop out the airship and start attacking X with his ride armor. Vile is literally invincible, so there is no point in fighting. Instead as X drop below a certain amount of energy Vile will start shooting an energy projectile toward X and has soon as it connects, X gets trapped and the fight ends, starting the cutscene with Zero saving X. A common speedrun  technique involve having X getting hurt in order to start the boss fight with low health, which will force Vile to shoot the trapping projectile and then run into it, basically skipping the entire fight. Attention however has to be made, since Vile will not stop attacking with the armor, which may results in the player being defeated.
+
+This stage contains following enemies\cite{wiki:Highway}:
+\begin{itemize}
+	\item Ball De Voux(\ref{enem:Ball_De_Voux})
+	\item Bomb Been(\ref{enem:Bomb Been})
+	\item Crusher(\ref{enem:Crusher})
+	\item Gun Volt(\ref{enem:Gun_Volt})
+	\item Jamminger(\ref{enem:Jamminger})
+	\item Road Attackers(\ref{enem:Road_Attackers})
+	\item Spiky(\ref{enem:Spiky})
+	\item Bee Blader(\ref{miniboss:Bee_Blader})
+\end{itemize}
+ 
 \section{Ocean}
+The Ocean stage (later renamed Subterranean Base in \mhx) is where Launch Octopus hides himself. Here X starts from the shoreline to immerse short after the beginning of the level. Once underwater X will jump higher than normal which, combined with the dash-jump and the beginning of the level being placed on top of a cliff, make the player capable of skipping a good portion of the first part of the underwater scenario\cite{stratwiki:Ocean}. Various fish-based enemies are present, but main difficulties of the sub-bosses the stage has, being three plus an optional one. In the first part main difficulties are given by spiked pit which X has to jump and from where Sea Attacker will spawn in group of three, interrupting X's jump and making him fall into the pit, and from the two Angler sub bosses, the second one being particular dangerous, since the floor has two spiked pits and the Angler will keep using his vacuum attack to push/pull X into them. Here the best strategy consists in stay at the leftmost platform and keep shooting, dashing to the right once it start pulling and shooting while it pushes X. Other than that Anglers will also shoot X four serpent-shaped harpoon which will move horizontally and then fall onto X when they're above him. Finally Anglers will rarely shoot a beam of light from their lamp, which can also be destroyed. After passing the second sub-boss the second part of the stage begins. Here spiked gaps are rarer (although still present) and whirlpools will start to appear at regular intervals and in specific positions. Those whirlpools can be used to propel X up to the ocean's surface. Proceeding in the stage bombs will start dropping from above, fired by a Cruiziler enemy. X can either climb a whirlpool to get onto it and destroy its core, making it sink and stop it from shooting bombs, or avoiding it and proceed in the level. Once passed falling bombs, X will find himself into an arena filled with sand. Here an Utuboros will start attacking him, rising from the sand, than swimming for a while and then immerse again in the sand. It is invincible for most of its body (which X can stand on), only the head and tail being vulnerable. Although its weakness is considered to be the Boomerang Cutter, due to lack of invincibility frame a single Storm Tornado fired behind its head will destroy him in one shot\cite{wiki:Utuboros}. After this other sub-boss X will have go on only for a little before finding himself in front of the boss door.
+Following enemies are present in the stage\cite{wiki:Ocean}:
+\begin{itemize}
+	\item Amenhopper(\ref{enem:Amenhopper})
+	\item Anglerge(\ref{miniboss:Anglerge})
+	\item Gulpfer(\ref{enem:Gulpfer})
+	\item Cruiziler(\ref{enem:Cruiziler})
+	\item Mega Tortoise(\ref{enem:Mega_Tortoise})
+	\item Sea Attacker(\ref{enem:Sea_Attacker})
+	\item Sky Claw(\ref{enem:Sky_Claw})
+	\item Utuboros(\ref{miniboss:Utuboros})
+\end{itemize}
+\subsection{Heart Tank}
+This stage only has an heart tank has collectible. In order to get it the player must first destroy the Cruizer by reaching the ocean's surface via a whirlpool, then climbing on it and then shoot at its blue core, avoiding the Sky Claws which the ship will spawn. Once destroyed the Cruizer will sink and will destroy the ocean floor, revealing an hidden portion with a large room filled with spiked gaps on the ground. Here another Utuboros (technically the first since the other reside later in the level) must be defeated, in order to open the door which leads to an Heart Tank. After that X must exit from where he entered and climb the wall where the ship fall in order to return to the main path.
+\subsection{Launch Octopus}
+Launch Octopus, the ``Armament General of the Deep Sea''\cite{wayback:X_resources} (or ``Military general of the deep''\cite{MHX:manual} in \mhx) was a Maverick Haunter of the 6th fleet armada before joining Sigma's rebellion and setting his base in the dept of the Ocean, in order to attack marine cities with his army of mechaniloids and to cut off shipping routes. In \x he joins Sigma due the fact he shares the dream of a world only for reploids, having always had doubt on protecting humans, while in \mhx he is pictured military tactician which want to achieve beauty in combat, considering himself an unappreciated artist of underwater fighting. Only Sigma understand his art, making Launch Octopus side with him\cite{wiki:MM_MHX_script}.
+
+In battle Octopus has two main techniques: Homing torpedo and Energy Drain. In reality he has a third technique, which consists in firing what can be considered a charged version of his Homing Torpedo. Both his types of missiles can be destroyed by shooting at them. Launch Octopus will always start the boss fight with a barrage of homing missile, to than switch to one of the other two weapons he has. Just like X, Octopus can fire a charged version of his homing missiles, which are piranha-shaped and homes much faster than their counterpart. Finally he has his Energy Drain attack. When performing this Octopus will first swim on top of the arena, either left or right, and then start spinning to create a whirlpool to suck X in. If he succeed he will start draining X energy to replenish his own, prolonging the fight. Octopus main weakness is the Rolling Shield, which deals him extra damage but can be hard to hit, due Octopus high mobility and the shield colliding with his missiles instead. However Octopus can be also heavily damaged by the Boomerang Cutter, which in three hits will sever his tentacles blocking him to perform his Energy Drain attack. 
+
+Officially\cite{wayback:X_resources} Launch Octopus is 232 cm tall and 182 Kg heavy, in contrast with in-game information\cite{wiki:Launch_Octopus} which show a weight value smaller than the actual one (see fig \ref{Octopus_specs}).
+
+One Launch Octopus has been defeated X will gain the Homing Torpedo(\ref{Homing_torpedo}) weapon, as well as cause a flood in the Forest Stage, making water appear near the beginning of the stage.
 \section{Snow Mountain}
 \section{Gallery}\label{Armored_Armadillo_Stage}
 \section{Factory}
