finished Snow stage, started inserting figures, started Gallery stage

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -163,3 +163,21 @@
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Launch_Octopus}
 }
+
+@online{stratwiki:Snow_mountain,
+	author={{Mega Man X/Chill Penguin}},
+	title={{STRATEGYWIKI}},
+	url={https://strategywiki.org/wiki/Mega_Man_X/Chill_Penguin}
+}
+
+@online{wiki:Snow_mountain,
+	author={{Snow Mountain Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Snow_Mountain_Stage}
+}
+
+@online{wiki:Chill_Penguin,
+	author={{Chill Penguin}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Chill_Penguin}
+}
