--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -1,24 +1,37 @@
 %enemies.tex
 \section{Mini-Bosses}
 	\begin{itemize}
-		\item Bee Blader \label{miniboss:Bee_Blader}
-		\item Anglerge\label{miniboss:Anglerge}
-		\item Utuboros\label{miniboss:Utuboros}
+		\item \hypertarget{miniboss:Anglerge}{Anglerge}
+		\item \hypertarget{miniboss:Bee_Blader}{Bee Blader}
+		\item \hypertarget{subboss:Mole Borer}{Mole Borer}
+		\item \hypertarget{miniboss:Utuboros}{Utuboros}
 	\end{itemize}
 
 \section{Other enemies}
 \begin{itemize}
-	\item Ball De Voux\label{enem:Ball_De_Voux}
-	\item Bomb Been\label{enem:Bomb Been}
-	\item Crusher\label{enem:Crusher}
-	\item Gun Volt\label{enem:Gun_Volt}
-	\item Jamminger\label{enem:Jamminger}
-	\item Road Attackers\label{enem:Road_Attackers}
-	\item Spiky\label{enem:Spiky}
-	\item Amenhopper\label{enem:Amenhopper}
-	\item Gulpfer\label{enem:Gulpfer}
-	\item Cruiziler\label{enem:Cruiziler}
-	\item Mega Tortoise\label{enem:Mega_Tortoise}
-	\item Sea Attacker\label{enem:Sea_Attacker}
-	\item Sky Claw\label{enem:Sky_Claw}
+	\item \hypertarget{enem:Amenhopper}{Amenhopper}
+	\item \hypertarget{enem:Armor_Soldier}{Armor Soldier}
+	\item \hypertarget{enem:Axe_Max}{Axe Max}
+	\item \hypertarget{enem:Ball_De_Voux}{Ball De Voux}
+	\item \hypertarget{enem:Batton_Bone}{Batton Bone}
+	\item \hypertarget{enem:Batton_M-501}{Batton M-501} 
+	\item \hypertarget{enem:Bomb_Been}{Bomb Been}
+	\item \hypertarget{enem:Crusher}{Crusher}
+	\item \hypertarget{enem:Cruiziler}{Cruiziler}
+	\item \hypertarget{enem:Dig_Labour}{Dig Labour} 
+	\item \hypertarget{enem:Flammingle}{Flammingle}
+	\item \hypertarget{enem:Gulpfer}{Gulpfer}
+	\item \hypertarget{enem:Gun_Volt}{Gun Volt}
+	\item \hypertarget{enem:Jamminger}{Jamminger}
+	\item \hypertarget{enem:Mega_Tortoise}{Mega Tortoise}
+	\item \hypertarget{enem:Metal_Wing}{Metal Wing}
+	\item \hypertarget{enem:Metall_C-15}{Metall C-15} 
+	\item \hypertarget{enem:Ray_Bit}{Ray Bit}
+	\item \hypertarget{enem:Road_Attackers}{Road Attackers}
+	\item \hypertarget{enem:Sea_Attacker}{Sea Attacker}
+	\item \hypertarget{enem:Sky_Claw}{Sky Claw}
+	\item \hypertarget{enem:Snow_Shooter}{Snow Shooter}
+	\item \hypertarget{enem:Spiky}{Spiky}
+	\item \hypertarget{enem:Tombot}{Tombot}
+
 \end{itemize}
