--- a/src/x1.tex
+++ b/src/x1.tex
@@ -67,7 +67,7 @@ Fire Wave converts the X-buster into a powerful flamethrower, which deals contin
 While exploring stages X can run into one of the four capsules hidden by Dr. Light. When entering in contact the capsule will open revealing Dr. Light's hologram which will talk to X and give him one of the armor parts\cite{wiki:First_armor}, explaining in the process how it works.
 The First Armor is composed by the following parts:
 \begin{itemize}
-	\item Foot Parts: Namely ``Emergency Acceleration System''\cite{X:Manual} allow X to dash forward, as well as to perform dash-jumps and wall dash-jumps. Moreover X can destroy specifics blocks by wall-jumping onto them. The capsule containing the foot parts reside right in the middle of the Snow Mountain Stage, being mandatory to take. In \mhx the capsule is instead at the beginning of Factory stage.
+	\item Foot Parts: Namely ``Emergency Acceleration System''\cite{X:Manual} allow X to dash forward, as well as to perform dash-jumps and wall dash-jumps as well as reducing his hitbox's height a little while dashing. Moreover X can destroy specifics blocks by wall-jumping onto them. The capsule containing the foot parts reside right in the middle of the Snow Mountain Stage, being mandatory to take. In \mhx the capsule is instead at the beginning of Factory stage.
 	
 	\item Body Parts: When equipped, X will have all incoming damage reduced by 50\%. It is found in the Forest stage after climbing the wall right before the cave. After defeating RT-55J the capsule will emerge from the ground. Meanwhile \textit{Maverick Haunter X} has moved it in Storm Eagle Stage, requiring the head part to access it.
 	
@@ -79,7 +79,7 @@ The First Armor is composed by the following parts:
 	
 	\item Hadoken. While not being technically a component of the First Armor, rather a hidden bonus, this technique is stored too inside a Light's capsule so it is reported here. It allows X to perform the well-know technique from \textit{Street Fighter} by inputting the button combination $\downarrow$ $\searrow$ $\rightarrow$ (with X facing right) + fire button or using the same combination while X is charging and release the charged shot\cite{RTA_wiki:X1}  AND X is at full health. The projectile deals 32 point of damage\cite{wiki:Hadoken} to all enemies, basically one-shotting every non-shielded enemy, bosses included. The only exception is Sigma's final form, and only in the original \textit{Mega Man X}. 
 	
-	Both in the original game and its remake the capsule is hidden in Armored Armadillo Stage, see \ref{Armored_Armadillo_Stage} for more information on how unlock it.
+	Both in the original game and its remake the capsule is hidden in Armored Armadillo Stage, see \ref{Haduken} for more information on how unlock it.
 \end{itemize}
 \section{Useful Techniques}
 Here are listed some useful techniques which the game does not explain but can be helpful while playing\cite{RTA_wiki:X1}: %dash shot, wall dash-jump slope jump, boss charged shots
@@ -102,33 +102,33 @@ The Highway Stage (Central HighWay in \mhx) is the first stage of the game. X ar
 
 This stage contains following enemies\cite{wiki:Highway}:
 \begin{itemize}
-	\item Ball De Voux(\ref{enem:Ball_De_Voux})
-	\item Bomb Been(\ref{enem:Bomb Been})
-	\item Crusher(\ref{enem:Crusher})
-	\item Gun Volt(\ref{enem:Gun_Volt})
-	\item Jamminger(\ref{enem:Jamminger})
-	\item Road Attackers(\ref{enem:Road_Attackers})
-	\item Spiky(\ref{enem:Spiky})
-	\item Bee Blader(\ref{miniboss:Bee_Blader})
+	\item \hyperlink{enem:Ball_De_Voux}{Ball De Voux }
+	\item \hyperlink{enem:Bomb_Been}{Bomb Been }
+	\item \hyperlink{enem:Crusher}{Crusher }
+	\item \hyperlink{enem:Gun_Volt}{Gun Volt}
+	\item \hyperlink{enem:Jamminger}{Jamminger}
+	\item \hyperlink{enem:Road_Attackers}{Road Attackers }
+	\item \hyperlink{enem:Spiky}{Spiky }
+	\item \hyperlink{miniboss:Bee_Blader}{Bee Blader }
 \end{itemize}
  
 \section{Ocean}
-The Ocean stage (later renamed Subterranean Base in \mhx) is where Launch Octopus hides himself. Here X starts from the shoreline to immerse short after the beginning of the level. Once underwater X will jump higher than normal which, combined with the dash-jump and the beginning of the level being placed on top of a cliff, make the player capable of skipping a good portion of the first part of the underwater scenario\cite{stratwiki:Ocean}. Various fish-based enemies are present, but main difficulties of the sub-bosses the stage has, being three plus an optional one. In the first part main difficulties are given by spiked pit which X has to jump and from where Sea Attacker will spawn in group of three, interrupting X's jump and making him fall into the pit, and from the two Angler sub bosses, the second one being particular dangerous, since the floor has two spiked pits and the Angler will keep using his vacuum attack to push/pull X into them. Here the best strategy consists in stay at the leftmost platform and keep shooting, dashing to the right once it start pulling and shooting while it pushes X. Other than that Anglers will also shoot X four serpent-shaped harpoon which will move horizontally and then fall onto X when they're above him. Finally Anglers will rarely shoot a beam of light from their lamp, which can also be destroyed. After passing the second sub-boss the second part of the stage begins. Here spiked gaps are rarer (although still present) and whirlpools will start to appear at regular intervals and in specific positions. Those whirlpools can be used to propel X up to the ocean's surface. Proceeding in the stage bombs will start dropping from above, fired by a Cruiziler enemy. X can either climb a whirlpool to get onto it and destroy its core, making it sink and stop it from shooting bombs, or avoiding it and proceed in the level. Once passed falling bombs, X will find himself into an arena filled with sand. Here an Utuboros will start attacking him, rising from the sand, than swimming for a while and then immerse again in the sand. It is invincible for most of its body (which X can stand on), only the head and tail being vulnerable. Although its weakness is considered to be the Boomerang Cutter, due to lack of invincibility frame a single Storm Tornado fired behind its head will destroy him in one shot\cite{wiki:Utuboros}. After this other sub-boss X will have go on only for a little before finding himself in front of the boss door.
+The \textit{Ocean stage} (later renamed Subterranean Base in \mhx) is where Launch Octopus hides himself. Here X starts from the shoreline to immerse short after the beginning of the level. Once underwater X will jump higher than normal which, combined with the dash-jump and the beginning of the level being placed on top of a cliff, make the player capable of skipping a good portion of the first part of the underwater scenario\cite{stratwiki:Ocean}. Various fish-based enemies are present, but main difficulties of the sub-bosses the stage has, being three plus an optional one. In the first part main difficulties are given by spiked pit which X has to jump and from where Sea Attacker will spawn in group of three, interrupting X's jump and making him fall into the pit, and from the two Angler sub bosses, the second one being particular dangerous, since the floor has two spiked pits and the Angler will keep using his vacuum attack to push/pull X into them. Here the best strategy consists in stay at the leftmost platform and keep shooting, dashing to the right once it start pulling and shooting while it pushes X. Other than that Anglers will also shoot X four serpent-shaped harpoon which will move horizontally and then fall onto X when they're above him. Finally Anglers will rarely shoot a beam of light from their lamp, which can also be destroyed. After passing the second sub-boss the second part of the stage begins. Here spiked gaps are rarer (although still present) and whirlpools will start to appear at regular intervals and in specific positions. Those whirlpools can be used to propel X up to the ocean's surface. Proceeding in the stage bombs will start dropping from above, fired by a Cruiziler enemy. X can either climb a whirlpool to get onto it and destroy its core, making it sink and stop it from shooting bombs, or avoiding it and proceed in the level. Once passed falling bombs, X will find himself into an arena filled with sand. Here an Utuboros will start attacking him, rising from the sand, than swimming for a while and then immerse again in the sand. It is invincible for most of its body (which X can stand on), only the head and tail being vulnerable. Although its weakness is considered to be the Boomerang Cutter, due to lack of invincibility frame a single Storm Tornado fired behind its head will destroy him in one shot\cite{wiki:Utuboros}. After this other sub-boss X will have go on only for a little before finding himself in front of the boss door.
 Following enemies are present in the stage\cite{wiki:Ocean}:
 \begin{itemize}
-	\item Amenhopper(\ref{enem:Amenhopper})
-	\item Anglerge(\ref{miniboss:Anglerge})
-	\item Gulpfer(\ref{enem:Gulpfer})
-	\item Cruiziler(\ref{enem:Cruiziler})
-	\item Mega Tortoise(\ref{enem:Mega_Tortoise})
-	\item Sea Attacker(\ref{enem:Sea_Attacker})
-	\item Sky Claw(\ref{enem:Sky_Claw})
-	\item Utuboros(\ref{miniboss:Utuboros})
+	\item \hyperlink{enem:Amenhopper}{Amenhopper}
+	\item \hyperlink{miniboss:Anglerge}{Anglerge}
+	\item \hyperlink{enem:Gulpfer}{Gulpfer }
+	\item \hyperlink{enem:Cruiziler}{Cruiziler}
+	\item \hyperlink{enem:Mega_Tortoise}{Mega Tortoise }
+	\item \hyperlink{enem:Sea_Attacker}{Sea Attacker}
+	\item \hyperlink{enem:Sky_Claw}{Sky Claw }
+	\item \hyperlink{miniboss:Utuboros}{Utuboros }
 \end{itemize}
 \subsection{Heart Tank}
 This stage only has an heart tank has collectible. In order to get it the player must first destroy the Cruizer by reaching the ocean's surface via a whirlpool, then climbing on it and then shoot at its blue core, avoiding the Sky Claws which the ship will spawn. Once destroyed the Cruizer will sink and will destroy the ocean floor, revealing an hidden portion with a large room filled with spiked gaps on the ground. Here another Utuboros (technically the first since the other reside later in the level) must be defeated, in order to open the door which leads to an Heart Tank. After that X must exit from where he entered and climb the wall where the ship fall in order to return to the main path.
 \subsection{Launch Octopus}
-Launch Octopus, the ``Armament General of the Deep Sea''\cite{wayback:X_resources} (or ``Military general of the deep''\cite{MHX:manual} in \mhx) was a Maverick Haunter of the 6th fleet armada before joining Sigma's rebellion and setting his base in the dept of the Ocean, in order to attack marine cities with his army of mechaniloids and to cut off shipping routes. In \x he joins Sigma due the fact he shares the dream of a world only for reploids, having always had doubt on protecting humans, while in \mhx he is pictured military tactician which want to achieve beauty in combat, considering himself an unappreciated artist of underwater fighting. Only Sigma understand his art, making Launch Octopus side with him\cite{wiki:MM_MHX_script}.
+Launch Octopus, the ``\textit{Armament General of the Deep Sea}''\cite{wayback:X_resources} (or ``\textit{Military general of the deep}''\cite{MHX:manual} in \mhx) was a Maverick Haunter of the 6th fleet armada before joining Sigma's rebellion and setting his base in the dept of the Ocean, in order to attack marine cities with his army of mechaniloids and to cut off shipping routes. In \x he joins Sigma due the fact he shares the dream of a world only for reploids, having always had doubt on protecting humans, while in \mhx he is pictured military tactician which want to achieve beauty in combat, considering himself an unappreciated artist of underwater fighting. Only Sigma understand his art, making Launch Octopus side with him\cite{wiki:MM_MHX_script}.
 
 In battle Octopus has two main techniques: Homing torpedo and Energy Drain. In reality he has a third technique, which consists in firing what can be considered a charged version of his Homing Torpedo. Both his types of missiles can be destroyed by shooting at them. Launch Octopus will always start the boss fight with a barrage of homing missile, to than switch to one of the other two weapons he has. Just like X, Octopus can fire a charged version of his homing missiles, which are piranha-shaped and homes much faster than their counterpart. Finally he has his Energy Drain attack. When performing this Octopus will first swim on top of the arena, either left or right, and then start spinning to create a whirlpool to suck X in. If he succeed he will start draining X energy to replenish his own, prolonging the fight. Octopus main weakness is the Rolling Shield, which deals him extra damage but can be hard to hit, due Octopus high mobility and the shield colliding with his missiles instead. However Octopus can be also heavily damaged by the Boomerang Cutter, which in three hits will sever his tentacles blocking him to perform his Energy Drain attack. 
 
@@ -136,7 +136,54 @@ Officially\cite{wayback:X_resources} Launch Octopus is 232 cm tall and 182 Kg he
 
 One Launch Octopus has been defeated X will gain the Homing Torpedo(\ref{Homing_torpedo}) weapon, as well as cause a flood in the Forest Stage, making water appear near the beginning of the stage.
 \section{Snow Mountain}
-\section{Gallery}\label{Armored_Armadillo_Stage}
+\textit{Snow Mountain}(\textit{Abandoned Missile Base in \mhx}) is probably the first stage most people go when starting the game, due to its low level of danger it contains\cite{stratwiki:Snow_mountain}, as for having inside the most useful upgrade X get can get, the Foot Parts. The stage, as the name states, takes place in a snow-covered mountain which X has to climb to get to the boss. The stage is divided into three main areas. The first area is where X starts and consists in a path that brings him inside a cave through a series of enemies. Once inside the cave (the second area) X has first to climb it by following a zig-zag path while also avoiding enemies which drop from higher level, and then to surpass some iced platform separated by pits until he reaches the end of the cave. In the third area X is again on the outside. Here he can take a Ride Armor and proceed for a while. With the armor X can also destroy the igloo he finds and that would otherwise start spawning enemies. Passed the first igloo the player can make a choice: he could either keep the Ride Armor and enter the small cave which comes next, where he has to jump some gaps using the armor while also face another enemy Ride Armor, or use his own armor to reach the top of the cave (jumping out of the armor to gain extra lift), basically skipping the lower portion. After that section X meets a tall wall which the armor cannot surpass, forcing him to leave it behind. Here he has to following a path full of slopes, gaps and Snow Shooters, which will throw snowballs at him and that become bigger the longer they roll on the snowy ground. After passing these enemies, the player will reach the boss door.
+
+The stage contains following enemies\cite{wiki:Snow_mountain}:
+\begin{itemize}
+	\item \hyperlink{enem:Armor_Soldier}{Armor Soldier} (with Ride Armor)
+	\item \hyperlink{enem:Axe_Max}{Axe Max}
+	\item \hyperlink{enem:Bat_Bone}{Bat Bone}
+	\item \hyperlink{enem:Bomb_Been}{Bomb Been}
+	\item \hyperlink{enem:Flammingle}{Flammingle}
+	\item \hyperlink{enem:Jamminger}{Jamminger }
+	\item \hyperlink{enem:Ray_Bit}{Ray Bit}
+	\item \hyperlink{enem:Snow_Shooter}{Snow Shooter}
+	\item \hyperlink{enem:Spiky}{Spiky}
+	\item \hyperlink{enem:Tombot}{Tombot}
+\end{itemize}
+\subsection{Foot Parts}
+This stage contains the Armor capsule for the Foot Parts, which allows X to dash, moving faster, perform dash-jumps and wall dash-jumps and alse reducing a little the height of this hitbox. The capsule is found on directly path after having climbed the first part of the cave. Since it is right in the middle of the path it is not avoidable, making it the only mandatory capsule of the entire series.
+\subsection{Heart Tank}
+The Heart Tank of this stage is hidden in the last igloo X meet before facing the section with snow balls. To reach it X has to jump using the Ride Armor. Right after the first igloo there is a light blue column, right before the cave with the enemy Ride Armor. From the top of the column the player has to jump with the armor and, once reached the maximum height, jump out of it in order to reach the wall which brings to the upper path. Here two other igloo are found which can be destroyed, now that the armor is gone, by using the Fire Wave weapon. In particular the last one contains the searched Heart Tank.
+\subsection{Chill Penguin}\label{boss:Chill_Penguin}
+The ''\textit{Lord of the Snowy Plains}`` (''\textit{Emperor of the Snowfield}``\cite{wayback:X_resources}), better known as Chill Penguin was a reploid of the 13th Polar Division, specifically designed for operating in polar environments also tanks to his small-size body. However due to the long permanence in the South Pole, away from civilization, Chill Penguin grown tired of his mission, seeking a way to get away from there. Sigma's rebellion give him exactly what he needed to get away, allowing him to escape and join Sigma in his fight. There are however some differences in how his story is told between \x and \textit{Maverick Haunter X}. In the former, after Sigma starts his revolt, Chill Penguin autonomously eliminated his own commander and escaped to join Sigma while also returning to the civilization\cite{Xcoll1:Manual_X1}. Once arrived Chill Penguin seized a mountain base in order to crush nearby cities using avalanches. Meanwhile in the remake it is Sigma himself which took away Chill Penguin from the South Pole by making him join the 17th division together with X and Zero, even before the revolution's beginning\cite{MHX:manual}. Later, while facing X, Chill Penguin revealed that, beside leaving the South Pole, he also joined the revolt due the payment Sigma gave him\cite{wiki:MMX_script}. Another minor difference with the original version is that, in the remake, Chill Penguin seized an abandoned missile base, hinting his purpose was to use it to attack the cities. He's known to be a belligerent, rowdy (sometimes even warped) individual, while also having trouble with his partner Flame Mammoth (\ref{boss:Flame_mammoth}) due his jealously of Mammoth size and the latter attitude of bullying smaller reploids.
+
+Chill Penguin is often considered the easiest boss of the game and the first one a player must face due the simplicity of avoiding his attacks, also thanks to the Foot Parts the stage give to the player. He has four main attack which will perform at random\cite{wiki:Chill_Penguin}. When he use his Shotgun Ice, Chill Penguin will shot four frozen projectiles which travel in a straight line, although some of them can fall off and slide on the ground, which shatter upon contact with a wall but can nullify X shot if the two met. Other times instead of his projectiles he will emit snow which will create two penguin-shaped ice sculpture and, if X is in range, will also freeze him in place. Sculptures act both as obstacles (X takes damage if he makes contact with them) and as cover since both X and Chill Penguin projectiles will be stopped by them. However X shots can damage and eventually break them. In some occasion Chill Penguin will leap in the air and grab the hook on the ceiling, unleashing a blizzard which will push X and the statues (if present) against a wall. When the sculpture hit a wall they shatter. Finally he can also slide on the floor for a while, turning immediately in case he hits a wall. While in this state he is invincible, but will also get rid the sculpture he creates.  As it is possible to see, Chill Penguins attacks only cover the low part of the arena, meaning the best strategy to fight him consist in staying on the higher part via continuous wall-jumps, only dropping to hit him when possible. Attention however must be made, since sometimes Chill Penguin will perform a high jump toward X position which can hit him even if he's  in the high corner of the room. Beside that he can be hit at any times, even when grabbing the hook, beside when sliding. He's weakness is the Fire Wave, which will burn and stun him for a while, but it has no other particular effect.
+
+After defeating him X will gain the Shotgun Ice(\ref{Shotgun_ice}) weapon as well as freezing the lava in the Factory Stage, considerably reducing the danger level of the stage.
+
+\section{Gallery}
+The Gallery Stage (or Energy Mines Ruins in \mhx) is the stage where controlled by Armored Armadillo. Peculiarity of this level are its mine cart which X can stand and, as soon as he does it, they start moving following the track, increasing their speed as they keep going and destroying all enemies that enter in contact with it. Hoever the player must be careful, as all the carts end their run into pits, bringing X down with them if he doesn't jump off at the right moment. This stage is also famous for containing the secret Light's capsule which teach X the Haduken technique.
+
+The stage itself is rather simple. Immediately at the beginning a mine cart is present which brings the player forward in the level taking care of enemies for him, but that end its ride when it comes across a series of gaps, one of which it cannot jump and falls into. For that moment the player must have dismount from the cart. After this sequence only few small gaps and some enemies separate X from the next section, which begin when he has to fall off a long pit in the ground. Here as he touches the floor a Mole Borer will destroy the left wall and start chasing X. It is invincible and its roller can insta-kill X if he touches it. Here only two solutions are possible: the first one is to escape to the right, continuing in the level; the second one is, as soon as X reaches the ground, wall jump immediately to the left before the Mole Borer breaks the wall and then jump down, following it from behind (while also gaining acces to the sub tank). In both cases the player has to go right to continue, followed by the mechaniloid (which will eventually crash and explode) or not. After this section another mine cart waits, which will bring the player deeper in the level and, again, end its ride into a pit. Just like the before after this part another large hole in the ground is present and X has to fall off to proceed, meeting another Mole Borer one he lands. This time however he will land behind it, avoiding another chase and, on the other hand, allow the mechanilod to create a passage for the player, until it crashes and explodes again (the player may also want to destroy it to avoid since while going it also destroys the acces to the heart tank) . Here there is the final cart X has to take to proceed. This mine cart brings X through many enemies until it reaches an opening on the mountain and flies off over a huge gap, impossible for X to jump. Once in the air the player must jump off the cart in order to land on the other side of the pit (or grab the wall if high enough), where the boss door is. While riding in the final parts a group of mechanical birds enemies will start spawning and fly alongside X. Since they fly the cart cannot destroy them, but X will have to, since they can mess up the final jump by hitting him and making him fall into the pit.
+
+Following enemies are present in the stage\cite{wiki:Gallery}
+\begin{itemize}
+	\item \hyperlink{enem:Bat_Bone}{Bat Bone} 
+	\item \hyperlink{enem:Batton_M-501}{Batton M-501} 
+	\item \hyperlink{enem:Dig_Labour}{Dig Labour} 
+	\item \hyperlink{enem:Flammingle}{Flammingle} 
+	\item \hyperlink{enem:Metal_Wing}{Metal Wing} 
+	\item \hyperlink{enem:Metall_C-15}{Metall C-15} 
+	\item \hyperlink{miniboss:Mole Borer}{Mole Borer}
+	\item \hyperlink{enem:Spiky}{Spiky}
+\end{itemize}
+\subsection{Sub Tank}
+The Sub Tank is located where the first Mole Borer spawn. In order to get it the player has, once arrived to the firs big gap in the ground, jump into it and then immediately wall-jump to the left, in order to let the Mole Borer break the wall and go right passing under X. Once it is passed, the player can safely jump off and go left to find the sub tank where the Mole Borer originally was. 
+\subsection{Heart Tank}
+The heart tank is located near where the second Mole Borer is found. Once the player jumps off the gap he has to chase the mechaniloid and destroy it in time, since as he proceed it destroy the walls which allow to access the Heart Tank. To do this the Fire Wave weapon is suggested, since it deals massive amount of damage to it a short span. 
+\subsection{Haduken}\label{Haduken}
+
 \section{Factory}
 \section{Airport}
 \section{Tower}
